# qrpc

./: .gitignore  Cargo.toml  README.md  build.rs
docs/: examples.md  grpc_example.md  message_examples.md  test.md  type_mapping.md
examples/restaurant/: Dockerfile  README.md  build.rs
examples/restaurant/proto/: example_service.proto
examples/restaurant/scripts/: Dockerfile  build.sh  run.sh
examples/restaurant/src/: main.rs  service.rs
examples/restaurant/src/proto/: mod.rs
examples/ticketing_machine/: Cargo.toml  build.rs
examples/ticketing_machine/proto/: ticket.proto
examples/ticketing_machine/src/: main.rs  service.rs
examples/ticketing_machine/src/proto/: mod.rs  ticket.rs
proto/: example.proto  example_service.proto  q.proto  restaurant.proto  ticket.proto
q/: grpc.q  grpc_client_methods.q
qrpc/: Cargo.toml  build.rs
qrpc/src/: lib.rs
qrpc/src/client/: mod.rs
qrpc/src/client/proto/: example.rs  mod.rs  q.rs
qrpc/src/message/: list.rs  map.rs  mod.rs
qrpc_build/: Cargo.toml
qrpc_build/src/: lib.rs
src/: lib.rs  message.rs
src/client/: mod.rs  rpc.rs
src/client/proto/: example_service.rs
src/message/: list.rs  map.rs  mod.rs
tests/: test.q  test_helper_function.q
